y.output
Terminals unused in grammar

   SEP_NOT
   SEP_OR


Rules useless in parser due to conflicts

   32 $@11: /* vacío */


Estado 6 conflictos: 1 reducción(ones)/reducción(ones)
Estado 101 conflictos: 1 reducción(ones)/reducción(ones)
Estado 104 conflictos: 1 reducción(ones)/reducción(ones)
Estado 125 conflictos: 1 reducción(ones)/reducción(ones)
Estado 128 conflictos: 1 reducción(ones)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: program

    2 program: sentencia
    3        | program sentencia

    4 sentencia: put
    5          | get
    6          | asignacion
    7          | maximo PYC
    8          | declaracion
    9          | while
   10          | if

   11 declaracion: DIM MENOR lista_id MAYOR AS MENOR lista_tipos MAYOR

   12 $@1: /* vacío */

   13 put: PUT CTE $@1 PYC

   14 $@2: /* vacío */

   15 put: PUT ID $@2 PYC

   16 $@3: /* vacío */

   17 put: PUT CTE_STRING $@3 PYC

   18 $@4: /* vacío */

   19 put: PUT CTE_HEXA $@4 PYC

   20 $@5: /* vacío */

   21 put: PUT CTE_REAL $@5 PYC

   22 $@6: /* vacío */

   23 put: PUT CTE_BIN $@6 PYC

   24 $@7: /* vacío */

   25 get: GET ID $@7 PYC

   26 maximo: MAXIMO P_A lista P_C

   27 $@8: /* vacío */

   28 $@9: /* vacío */

   29 asignacion: ID $@8 OP_ASIG exp $@9 PYC

   30 $@10: /* vacío */

   31 while: WHILE $@10 P_A condicion_simple P_C L_A program L_C

   32 $@11: /* vacío */

   33 while: WHILE $@11 P_A condicion_simple P_C sentencia

   34 $@12: /* vacío */

   35 if: IF P_A condicion_simple P_C L_A program L_C $@12 else

   36 $@13: /* vacío */

   37 if: IF P_A condicion_simple P_C sentencia $@13 else
   38   | IF P_A condicion_simple P_C L_A program L_C
   39   | IF P_A condicion_simple P_C sentencia

   40 $@14: /* vacío */

   41 if: IF P_A condicion P_C L_A program L_C $@14 else

   42 $@15: /* vacío */

   43 if: IF P_A condicion P_C sentencia $@15 else
   44   | IF P_A condicion P_C L_A program L_C
   45   | IF P_A condicion P_C sentencia

   46 else: ELSE L_A program L_C
   47     | ELSE sentencia

   48 condicion_simple: exp MENOR exp
   49                 | exp MAYOR exp
   50                 | exp MENOR_I exp
   51                 | exp MAYOR_I exp
   52                 | exp OP_IGUAL exp
   53                 | exp OP_DIST exp

   54 condicion: condicion_simple SEP_AND condicion_simple

   55 exp: exp OP_SUM term
   56    | exp OP_RES term
   57    | term

   58 term: term OP_MUL factor
   59     | term OP_DIV factor
   60     | factor

   61 factor: CTE
   62       | ID
   63       | CTE_STRING
   64       | CTE_HEXA
   65       | CTE_REAL
   66       | CTE_BIN
   67       | P_A exp P_C
   68       | maximo

   69 lista: exp
   70      | lista COMA exp

   71 lista_tipos: lista_tipos COMA tipo
   72            | tipo

   73 lista_id: lista_id COMA ID
   74         | ID

   75 tipo: INTEGER
   76     | FLOAT
   77     | STRING


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
PUT (258) 13 15 17 19 21 23
GET (259) 25
MAXIMO (260) 26
DIM (261) 11
AS (262) 11
ID (263) 15 25 29 62 73 74
INTEGER (264) 75
FLOAT (265) 76
STRING (266) 77
CTE_STRING (267) 17 63
CTE (268) 13 61
CTE_HEXA (269) 19 64
CTE_REAL (270) 21 65
CTE_BIN (271) 23 66
OP_ASIG (272) 29
OP_SUM (273) 55
OP_RES (274) 56
OP_MUL (275) 58
OP_DIV (276) 59
OP_IGUAL (277) 52
OP_DIST (278) 53
P_A (279) 26 31 33 35 37 38 39 41 43 44 45 67
P_C (280) 26 31 33 35 37 38 39 41 43 44 45 67
L_A (281) 31 35 38 41 44 46
L_C (282) 31 35 38 41 44 46
MENOR (283) 11 48
MAYOR (284) 11 49
MAYOR_I (285) 51
MENOR_I (286) 50
PYC (287) 7 13 15 17 19 21 23 25 29
COMA (288) 70 71 73
WHILE (289) 31 33
IF (290) 35 37 38 39 41 43 44 45
ELSE (291) 46 47
SEP_AND (292) 54
SEP_NOT (293)
SEP_OR (294)


No terminales con las reglas donde aparecen

$accept (40)
    en la izquierda: 0
programa (41)
    en la izquierda: 1, en la derecha: 0
program (42)
    en la izquierda: 2 3, en la derecha: 1 3 31 35 38 41 44 46
sentencia (43)
    en la izquierda: 4 5 6 7 8 9 10, en la derecha: 2 3 33 37 39 43
    45 47
declaracion (44)
    en la izquierda: 11, en la derecha: 8
put (45)
    en la izquierda: 13 15 17 19 21 23, en la derecha: 4
$@1 (46)
    en la izquierda: 12, en la derecha: 13
$@2 (47)
    en la izquierda: 14, en la derecha: 15
$@3 (48)
    en la izquierda: 16, en la derecha: 17
$@4 (49)
    en la izquierda: 18, en la derecha: 19
$@5 (50)
    en la izquierda: 20, en la derecha: 21
$@6 (51)
    en la izquierda: 22, en la derecha: 23
get (52)
    en la izquierda: 25, en la derecha: 5
$@7 (53)
    en la izquierda: 24, en la derecha: 25
maximo (54)
    en la izquierda: 26, en la derecha: 7 68
asignacion (55)
    en la izquierda: 29, en la derecha: 6
$@8 (56)
    en la izquierda: 27, en la derecha: 29
$@9 (57)
    en la izquierda: 28, en la derecha: 29
while (58)
    en la izquierda: 31 33, en la derecha: 9
$@10 (59)
    en la izquierda: 30, en la derecha: 31
$@11 (60)
    en la izquierda: 32, en la derecha: 33
if (61)
    en la izquierda: 35 37 38 39 41 43 44 45, en la derecha: 10
$@12 (62)
    en la izquierda: 34, en la derecha: 35
$@13 (63)
    en la izquierda: 36, en la derecha: 37
$@14 (64)
    en la izquierda: 40, en la derecha: 41
$@15 (65)
    en la izquierda: 42, en la derecha: 43
else (66)
    en la izquierda: 46 47, en la derecha: 35 37 41 43
condicion_simple (67)
    en la izquierda: 48 49 50 51 52 53, en la derecha: 31 33 35 37
    38 39 54
condicion (68)
    en la izquierda: 54, en la derecha: 41 43 44 45
exp (69)
    en la izquierda: 55 56 57, en la derecha: 29 48 49 50 51 52 53
    55 56 67 69 70
term (70)
    en la izquierda: 58 59 60, en la derecha: 55 56 57 58 59
factor (71)
    en la izquierda: 61 62 63 64 65 66 67 68, en la derecha: 58 59
    60
lista (72)
    en la izquierda: 69 70, en la derecha: 26 70
lista_tipos (73)
    en la izquierda: 71 72, en la derecha: 11 71
lista_id (74)
    en la izquierda: 73 74, en la derecha: 11 73
tipo (75)
    en la izquierda: 75 76 77, en la derecha: 71 72


estado 0

    0 $accept: . programa $end

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    programa     ir al estado 8
    program      ir al estado 9
    sentencia    ir al estado 10
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 1

   13 put: PUT . CTE $@1 PYC
   15    | PUT . ID $@2 PYC
   17    | PUT . CTE_STRING $@3 PYC
   19    | PUT . CTE_HEXA $@4 PYC
   21    | PUT . CTE_REAL $@5 PYC
   23    | PUT . CTE_BIN $@6 PYC

    ID          desplazar e ir al estado 18
    CTE_STRING  desplazar e ir al estado 19
    CTE         desplazar e ir al estado 20
    CTE_HEXA    desplazar e ir al estado 21
    CTE_REAL    desplazar e ir al estado 22
    CTE_BIN     desplazar e ir al estado 23


estado 2

   25 get: GET . ID $@7 PYC

    ID  desplazar e ir al estado 24


estado 3

   26 maximo: MAXIMO . P_A lista P_C

    P_A  desplazar e ir al estado 25


estado 4

   11 declaracion: DIM . MENOR lista_id MAYOR AS MENOR lista_tipos MAYOR

    MENOR  desplazar e ir al estado 26


estado 5

   29 asignacion: ID . $@8 OP_ASIG exp $@9 PYC

    $default  reduce usando la regla 27 ($@8)

    $@8  ir al estado 27


estado 6

   31 while: WHILE . $@10 P_A condicion_simple P_C L_A program L_C
   33      | WHILE . $@11 P_A condicion_simple P_C sentencia

    P_A       reduce usando la regla 30 ($@10)
    P_A       [reduce usando la regla 32 ($@11)]
    $default  reduce usando la regla 30 ($@10)

    $@10  ir al estado 28
    $@11  ir al estado 29


estado 7

   35 if: IF . P_A condicion_simple P_C L_A program L_C $@12 else
   37   | IF . P_A condicion_simple P_C sentencia $@13 else
   38   | IF . P_A condicion_simple P_C L_A program L_C
   39   | IF . P_A condicion_simple P_C sentencia
   41   | IF . P_A condicion P_C L_A program L_C $@14 else
   43   | IF . P_A condicion P_C sentencia $@15 else
   44   | IF . P_A condicion P_C L_A program L_C
   45   | IF . P_A condicion P_C sentencia

    P_A  desplazar e ir al estado 30


estado 8

    0 $accept: programa . $end

    $end  desplazar e ir al estado 31


estado 9

    1 programa: program .
    3 program: program . sentencia

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    $default  reduce usando la regla 1 (programa)

    sentencia    ir al estado 32
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 10

    2 program: sentencia .

    $default  reduce usando la regla 2 (program)


estado 11

    8 sentencia: declaracion .

    $default  reduce usando la regla 8 (sentencia)


estado 12

    4 sentencia: put .

    $default  reduce usando la regla 4 (sentencia)


estado 13

    5 sentencia: get .

    $default  reduce usando la regla 5 (sentencia)


estado 14

    7 sentencia: maximo . PYC

    PYC  desplazar e ir al estado 33


estado 15

    6 sentencia: asignacion .

    $default  reduce usando la regla 6 (sentencia)


estado 16

    9 sentencia: while .

    $default  reduce usando la regla 9 (sentencia)


estado 17

   10 sentencia: if .

    $default  reduce usando la regla 10 (sentencia)


estado 18

   15 put: PUT ID . $@2 PYC

    $default  reduce usando la regla 14 ($@2)

    $@2  ir al estado 34


estado 19

   17 put: PUT CTE_STRING . $@3 PYC

    $default  reduce usando la regla 16 ($@3)

    $@3  ir al estado 35


estado 20

   13 put: PUT CTE . $@1 PYC

    $default  reduce usando la regla 12 ($@1)

    $@1  ir al estado 36


estado 21

   19 put: PUT CTE_HEXA . $@4 PYC

    $default  reduce usando la regla 18 ($@4)

    $@4  ir al estado 37


estado 22

   21 put: PUT CTE_REAL . $@5 PYC

    $default  reduce usando la regla 20 ($@5)

    $@5  ir al estado 38


estado 23

   23 put: PUT CTE_BIN . $@6 PYC

    $default  reduce usando la regla 22 ($@6)

    $@6  ir al estado 39


estado 24

   25 get: GET ID . $@7 PYC

    $default  reduce usando la regla 24 ($@7)

    $@7  ir al estado 40


estado 25

   26 maximo: MAXIMO P_A . lista P_C

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 49
    term    ir al estado 50
    factor  ir al estado 51
    lista   ir al estado 52


estado 26

   11 declaracion: DIM MENOR . lista_id MAYOR AS MENOR lista_tipos MAYOR

    ID  desplazar e ir al estado 53

    lista_id  ir al estado 54


estado 27

   29 asignacion: ID $@8 . OP_ASIG exp $@9 PYC

    OP_ASIG  desplazar e ir al estado 55


estado 28

   31 while: WHILE $@10 . P_A condicion_simple P_C L_A program L_C

    P_A  desplazar e ir al estado 56


estado 29

   33 while: WHILE $@11 . P_A condicion_simple P_C sentencia

    P_A  desplazar e ir al estado 57


estado 30

   35 if: IF P_A . condicion_simple P_C L_A program L_C $@12 else
   37   | IF P_A . condicion_simple P_C sentencia $@13 else
   38   | IF P_A . condicion_simple P_C L_A program L_C
   39   | IF P_A . condicion_simple P_C sentencia
   41   | IF P_A . condicion P_C L_A program L_C $@14 else
   43   | IF P_A . condicion P_C sentencia $@15 else
   44   | IF P_A . condicion P_C L_A program L_C
   45   | IF P_A . condicion P_C sentencia

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo            ir al estado 48
    condicion_simple  ir al estado 58
    condicion         ir al estado 59
    exp               ir al estado 60
    term              ir al estado 50
    factor            ir al estado 51


estado 31

    0 $accept: programa $end .

    $default  aceptar


estado 32

    3 program: program sentencia .

    $default  reduce usando la regla 3 (program)


estado 33

    7 sentencia: maximo PYC .

    $default  reduce usando la regla 7 (sentencia)


estado 34

   15 put: PUT ID $@2 . PYC

    PYC  desplazar e ir al estado 61


estado 35

   17 put: PUT CTE_STRING $@3 . PYC

    PYC  desplazar e ir al estado 62


estado 36

   13 put: PUT CTE $@1 . PYC

    PYC  desplazar e ir al estado 63


estado 37

   19 put: PUT CTE_HEXA $@4 . PYC

    PYC  desplazar e ir al estado 64


estado 38

   21 put: PUT CTE_REAL $@5 . PYC

    PYC  desplazar e ir al estado 65


estado 39

   23 put: PUT CTE_BIN $@6 . PYC

    PYC  desplazar e ir al estado 66


estado 40

   25 get: GET ID $@7 . PYC

    PYC  desplazar e ir al estado 67


estado 41

   62 factor: ID .

    $default  reduce usando la regla 62 (factor)


estado 42

   63 factor: CTE_STRING .

    $default  reduce usando la regla 63 (factor)


estado 43

   61 factor: CTE .

    $default  reduce usando la regla 61 (factor)


estado 44

   64 factor: CTE_HEXA .

    $default  reduce usando la regla 64 (factor)


estado 45

   65 factor: CTE_REAL .

    $default  reduce usando la regla 65 (factor)


estado 46

   66 factor: CTE_BIN .

    $default  reduce usando la regla 66 (factor)


estado 47

   67 factor: P_A . exp P_C

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 68
    term    ir al estado 50
    factor  ir al estado 51


estado 48

   68 factor: maximo .

    $default  reduce usando la regla 68 (factor)


estado 49

   55 exp: exp . OP_SUM term
   56    | exp . OP_RES term
   69 lista: exp .

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 69 (lista)


estado 50

   57 exp: term .
   58 term: term . OP_MUL factor
   59     | term . OP_DIV factor

    OP_MUL  desplazar e ir al estado 71
    OP_DIV  desplazar e ir al estado 72

    $default  reduce usando la regla 57 (exp)


estado 51

   60 term: factor .

    $default  reduce usando la regla 60 (term)


estado 52

   26 maximo: MAXIMO P_A lista . P_C
   70 lista: lista . COMA exp

    P_C   desplazar e ir al estado 73
    COMA  desplazar e ir al estado 74


estado 53

   74 lista_id: ID .

    $default  reduce usando la regla 74 (lista_id)


estado 54

   11 declaracion: DIM MENOR lista_id . MAYOR AS MENOR lista_tipos MAYOR
   73 lista_id: lista_id . COMA ID

    MAYOR  desplazar e ir al estado 75
    COMA   desplazar e ir al estado 76


estado 55

   29 asignacion: ID $@8 OP_ASIG . exp $@9 PYC

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 77
    term    ir al estado 50
    factor  ir al estado 51


estado 56

   31 while: WHILE $@10 P_A . condicion_simple P_C L_A program L_C

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo            ir al estado 48
    condicion_simple  ir al estado 78
    exp               ir al estado 60
    term              ir al estado 50
    factor            ir al estado 51


estado 57

   33 while: WHILE $@11 P_A . condicion_simple P_C sentencia

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo            ir al estado 48
    condicion_simple  ir al estado 79
    exp               ir al estado 60
    term              ir al estado 50
    factor            ir al estado 51


estado 58

   35 if: IF P_A condicion_simple . P_C L_A program L_C $@12 else
   37   | IF P_A condicion_simple . P_C sentencia $@13 else
   38   | IF P_A condicion_simple . P_C L_A program L_C
   39   | IF P_A condicion_simple . P_C sentencia
   54 condicion: condicion_simple . SEP_AND condicion_simple

    P_C      desplazar e ir al estado 80
    SEP_AND  desplazar e ir al estado 81


estado 59

   41 if: IF P_A condicion . P_C L_A program L_C $@14 else
   43   | IF P_A condicion . P_C sentencia $@15 else
   44   | IF P_A condicion . P_C L_A program L_C
   45   | IF P_A condicion . P_C sentencia

    P_C  desplazar e ir al estado 82


estado 60

   48 condicion_simple: exp . MENOR exp
   49                 | exp . MAYOR exp
   50                 | exp . MENOR_I exp
   51                 | exp . MAYOR_I exp
   52                 | exp . OP_IGUAL exp
   53                 | exp . OP_DIST exp
   55 exp: exp . OP_SUM term
   56    | exp . OP_RES term

    OP_SUM    desplazar e ir al estado 69
    OP_RES    desplazar e ir al estado 70
    OP_IGUAL  desplazar e ir al estado 83
    OP_DIST   desplazar e ir al estado 84
    MENOR     desplazar e ir al estado 85
    MAYOR     desplazar e ir al estado 86
    MAYOR_I   desplazar e ir al estado 87
    MENOR_I   desplazar e ir al estado 88


estado 61

   15 put: PUT ID $@2 PYC .

    $default  reduce usando la regla 15 (put)


estado 62

   17 put: PUT CTE_STRING $@3 PYC .

    $default  reduce usando la regla 17 (put)


estado 63

   13 put: PUT CTE $@1 PYC .

    $default  reduce usando la regla 13 (put)


estado 64

   19 put: PUT CTE_HEXA $@4 PYC .

    $default  reduce usando la regla 19 (put)


estado 65

   21 put: PUT CTE_REAL $@5 PYC .

    $default  reduce usando la regla 21 (put)


estado 66

   23 put: PUT CTE_BIN $@6 PYC .

    $default  reduce usando la regla 23 (put)


estado 67

   25 get: GET ID $@7 PYC .

    $default  reduce usando la regla 25 (get)


estado 68

   55 exp: exp . OP_SUM term
   56    | exp . OP_RES term
   67 factor: P_A exp . P_C

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70
    P_C     desplazar e ir al estado 89


estado 69

   55 exp: exp OP_SUM . term

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    term    ir al estado 90
    factor  ir al estado 51


estado 70

   56 exp: exp OP_RES . term

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    term    ir al estado 91
    factor  ir al estado 51


estado 71

   58 term: term OP_MUL . factor

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    factor  ir al estado 92


estado 72

   59 term: term OP_DIV . factor

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    factor  ir al estado 93


estado 73

   26 maximo: MAXIMO P_A lista P_C .

    $default  reduce usando la regla 26 (maximo)


estado 74

   70 lista: lista COMA . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 94
    term    ir al estado 50
    factor  ir al estado 51


estado 75

   11 declaracion: DIM MENOR lista_id MAYOR . AS MENOR lista_tipos MAYOR

    AS  desplazar e ir al estado 95


estado 76

   73 lista_id: lista_id COMA . ID

    ID  desplazar e ir al estado 96


estado 77

   29 asignacion: ID $@8 OP_ASIG exp . $@9 PYC
   55 exp: exp . OP_SUM term
   56    | exp . OP_RES term

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 28 ($@9)

    $@9  ir al estado 97


estado 78

   31 while: WHILE $@10 P_A condicion_simple . P_C L_A program L_C

    P_C  desplazar e ir al estado 98


estado 79

   33 while: WHILE $@11 P_A condicion_simple . P_C sentencia

    P_C  desplazar e ir al estado 99


estado 80

   35 if: IF P_A condicion_simple P_C . L_A program L_C $@12 else
   37   | IF P_A condicion_simple P_C . sentencia $@13 else
   38   | IF P_A condicion_simple P_C . L_A program L_C
   39   | IF P_A condicion_simple P_C . sentencia

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    L_A     desplazar e ir al estado 100
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    sentencia    ir al estado 101
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 81

   54 condicion: condicion_simple SEP_AND . condicion_simple

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo            ir al estado 48
    condicion_simple  ir al estado 102
    exp               ir al estado 60
    term              ir al estado 50
    factor            ir al estado 51


estado 82

   41 if: IF P_A condicion P_C . L_A program L_C $@14 else
   43   | IF P_A condicion P_C . sentencia $@15 else
   44   | IF P_A condicion P_C . L_A program L_C
   45   | IF P_A condicion P_C . sentencia

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    L_A     desplazar e ir al estado 103
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    sentencia    ir al estado 104
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 83

   52 condicion_simple: exp OP_IGUAL . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 105
    term    ir al estado 50
    factor  ir al estado 51


estado 84

   53 condicion_simple: exp OP_DIST . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 106
    term    ir al estado 50
    factor  ir al estado 51


estado 85

   48 condicion_simple: exp MENOR . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 107
    term    ir al estado 50
    factor  ir al estado 51


estado 86

   49 condicion_simple: exp MAYOR . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 108
    term    ir al estado 50
    factor  ir al estado 51


estado 87

   51 condicion_simple: exp MAYOR_I . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 109
    term    ir al estado 50
    factor  ir al estado 51


estado 88

   50 condicion_simple: exp MENOR_I . exp

    MAXIMO      desplazar e ir al estado 3
    ID          desplazar e ir al estado 41
    CTE_STRING  desplazar e ir al estado 42
    CTE         desplazar e ir al estado 43
    CTE_HEXA    desplazar e ir al estado 44
    CTE_REAL    desplazar e ir al estado 45
    CTE_BIN     desplazar e ir al estado 46
    P_A         desplazar e ir al estado 47

    maximo  ir al estado 48
    exp     ir al estado 110
    term    ir al estado 50
    factor  ir al estado 51


estado 89

   67 factor: P_A exp P_C .

    $default  reduce usando la regla 67 (factor)


estado 90

   55 exp: exp OP_SUM term .
   58 term: term . OP_MUL factor
   59     | term . OP_DIV factor

    OP_MUL  desplazar e ir al estado 71
    OP_DIV  desplazar e ir al estado 72

    $default  reduce usando la regla 55 (exp)


estado 91

   56 exp: exp OP_RES term .
   58 term: term . OP_MUL factor
   59     | term . OP_DIV factor

    OP_MUL  desplazar e ir al estado 71
    OP_DIV  desplazar e ir al estado 72

    $default  reduce usando la regla 56 (exp)


estado 92

   58 term: term OP_MUL factor .

    $default  reduce usando la regla 58 (term)


estado 93

   59 term: term OP_DIV factor .

    $default  reduce usando la regla 59 (term)


estado 94

   55 exp: exp . OP_SUM term
   56    | exp . OP_RES term
   70 lista: lista COMA exp .

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 70 (lista)


estado 95

   11 declaracion: DIM MENOR lista_id MAYOR AS . MENOR lista_tipos MAYOR

    MENOR  desplazar e ir al estado 111


estado 96

   73 lista_id: lista_id COMA ID .

    $default  reduce usando la regla 73 (lista_id)


estado 97

   29 asignacion: ID $@8 OP_ASIG exp $@9 . PYC

    PYC  desplazar e ir al estado 112


estado 98

   31 while: WHILE $@10 P_A condicion_simple P_C . L_A program L_C

    L_A  desplazar e ir al estado 113


estado 99

   33 while: WHILE $@11 P_A condicion_simple P_C . sentencia

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    sentencia    ir al estado 114
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 100

   35 if: IF P_A condicion_simple P_C L_A . program L_C $@12 else
   38   | IF P_A condicion_simple P_C L_A . program L_C

    PUT     desplazar e ir al estado 1
    GET     desplazar e ir al estado 2
    MAXIMO  desplazar e ir al estado 3
    DIM     desplazar e ir al estado 4
    ID      desplazar e ir al estado 5
    WHILE   desplazar e ir al estado 6
    IF      desplazar e ir al estado 7

    program      ir al estado 115
    sentencia    ir al estado 10
    declaracion  ir al estado 11
    put          ir al estado 12
    get          ir al estado 13
    maximo       ir al estado 14
    asignacion   ir al estado 15
    while        ir al estado 16
    if           ir al estado 17


estado 101

   37 if: IF P_A condicion_simple P_C sentencia . $@13 else
   39   | IF P_A condicion_simple P_C sentencia .

    ELSE      reduce usando la regla 36 ($@13)
    ELSE      [reduce usando la regla 39 (if)]
    $default  reduce usando la regla 39 (if)

    $@13  ir al estado 116


estado 102

   54 condicion: condicion_simple SEP_AND condicion_simple .

    $default  reduce usando la regla 54 (condicion)


estado 103
